--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "firebase": "^9.23.0",
     "next": "13.4.3",
     "react": "18.2.0",
+    "react-calendar": "^4.3.0",
     "react-dom": "18.2.0"
   }
 }
